2010-11-19  Dai Mikurube  <dmikurube@google.com>

Reviewed by Kent Tamura.

        stepUp/stepDown for values in step-mismatching state for input elements
        https://bugs.webkit.org/show_bug.cgi?id=48976

        * fast/forms/input-stepup-stepdown-expected.txt:
        * fast/forms/script-tests/input-stepup-stepdown.js:
2010-11-19  Dai Mikurube  <dmikurube@google.com>

        Reviewed by Kent Tamura.

        stepUp/stepDown for values in step-mismatching state for input elements
        https://bugs.webkit.org/show_bug.cgi?id=48976

        Fixed stepUp/stepDown behaviors for step-mismatching values to follow the specification of
        HTML5 4.10.7.3 Common input element APIs. In details, disabled any stepwise adjustment for
        step-mismatching values.

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::applyStep):

Canonical link: https://commits.webkit.org/62839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72377 268f45cc-cd09-0410-ab3c-d52691b4dbfc